# libghost

./: CMakeLists.txt  README.md
docs/: main.md
include/: ghost-protocol.h  proto.h
src/: proto.c
test/: CMakeLists.txt  test.c
